Moved action to update lists to update_lists from update

--- a/app/views/users/_inventory_list.html.erb
+++ b/app/views/users/_inventory_list.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user do |f| %>
+<%= form_for @user, :url => "#{current_user.id}/update_lists", method: :post do |f| %>
 	<%= f.fields_for :inventory_list do |list_fields| %>
 		<table class="table-minimal fixed">
 
@@ -36,7 +36,7 @@
 					<% listed_card = @user.inventory_cards[i] %>
 						<tr>
 							<td class="inventory-column">
-								!<%= listed_card_fields.number_field :amount %>!
+								<%= listed_card_fields.number_field :amount %>
 							</td>
 							<td class="tradeable-column">
 								<% if @user.amount_of_card_in("tradeable_list", listed_card.card_id) == 0 %>
