--- a/app/views/users/_wanted_list.html.erb
+++ b/app/views/users/_wanted_list.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user do |f| %>
+<%= form_for @user, :url => "#{current_user.id}/update_lists", method: :post do |f| %>
 	<%= f.fields_for :wanted_list do |list_fields| %>
 		<table class="table-minimal fixed">
 			<tbody>
