--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,8 @@
 
         <div class = "menu">
           <% if current_user %>
-            <div class = "menuitem"><%= link_to "Trade Binder", user_path(current_user.id)%> </div>
-            <div class = "menuitem"><%= link_to "User Trades", user_trades_path(current_user.id) %></div>
+            <div class = "menuitem"><%= link_to "My Binder", user_path(current_user.id)%> </div>
+            <div class = "menuitem"><%= link_to "My Trades", user_trades_path(current_user.id) %></div>
             <div class = "menuitem"><%= link_to "Find Trades", users_path%></div>
             <div class = "menuitem"><%= link_to "User Settings", root_path %></br></div>
           <% else %>
