added auto login after account creation

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -26,7 +26,7 @@
      <div class="field">
       <%= f.label :dci_Number %><br/>
       <%= f.text_field :dci_number %>
-
+    </div>
     <div class="actions"><%= f.submit %></div>
   <% end %>
 </div>
