Removed background color from list qtys

--- a/app/assets/stylesheets/modules/accordiantabs.scss
+++ b/app/assets/stylesheets/modules/accordiantabs.scss
@@ -14,16 +14,16 @@
 
 // Table styling
 .inventory-column {
-  background-color:  $inventorycolor;
+  // background-color:  $inventorycolor;
 
 }
 
 .tradeable-column {
-  background-color: $tradeablecolor;
+  // background-color: $tradeablecolor;
 }
 
 .wanted-column {
-  background-color: $wantedcolor;
+  // background-color: $wantedcolor;
 }
 
 // table.fixed { table-layout:fixed; }
