--- a/app/views/trades/show.html.erb
+++ b/app/views/trades/show.html.erb
@@ -1,5 +1,40 @@
 <div>
 	<h2>Trade with <%= @trade.other_user(current_user).full_name %></h2>
+	<div class="modal">
+	  <label for="modal-1">
+	    <div class="modal-trigger">Messages</div>
+	  </label>
+	  <input class="modal-state" id="modal-1" type="checkbox" />
+	  <div class="modal-window">
+	    <div class="modal-inner">
+	      <label class="modal-close" for="modal-1"></label>
+	      <h1>Message <%= @trade.other_user(current_user).full_name %></h1>
+	      	<div>
+	      		<% @trade.comments.each do |comment| %>
+		      		<div class="comment">
+						  <div class="comment-image">
+						    <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="Logo image">
+						  </div>
+						  <div class="comment-content">
+						    <h1><%= comment.user.full_name %></h1>
+						    <p><%= comment.body %></p>
+						    <p class="comment-detail">to do</p>
+						  </div>
+						</div>
+	      		<% end %>
+	      	</div>
+	      	<div>
+	      		<%= form_for [@trade, @comment] do |form| %>
+	      			<div>
+	      				<%= form.text_area :body %>
+	      				<%= form.submit "Send" %>
+	      			</div>
+	      		<% end %>
+	      	</div>
+	    </div>
+	  </div>
+	</div>
+
 	<% if @trade.status == "pending" %>
 		<%= form_for @trade do |f| %>
 			<h2>Your Cards</h2>
