--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,7 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  */
-$visual-grid: false;
+$visual-grid: true;
 $visual-grid-color: red;
 $visual-grid-index: front;
 $visual-grid-opacity: 0.1;
@@ -27,32 +27,61 @@ html{
 
 @import "modules/modules";
 
+
 .titleofpage{
 
 	@include span-columns(5);
-	 @include becoolfont(2em);
+	 // @include becoolfont(2em);
 	 @include titleborder(0, 1, 1, 0 );
 }
 .clear{
 	  @include clearfix;
 }
-
-
-
-
-$break-large: 930px;
-$break-medium: 750px;
-
-
-
-
-  @media screen and (max-width: $break-large) {
- html{
- 	font-size: 12px;
-    }
+#titlefontdude{
+  h1{
+    font-size: .7em;
   }
-@media screen and (max-width: $break-medium) {
- html{
- 	font-size: 8px;
+}
+
+ body{
+  @include outer-container;
+ }
+
+
+ .collapsable {
+  @include media(min-width 700px max-width 950px) {
+    font-size: 75%;
+   }
+   @include media(min-width 560px max-width 700px) {
+    font-size: 60%;
+    .fullerton{
+      height: 15em;
+
+      @include span-columns(12);
+        .name{
+          @include span-columns(1);
+        }
+        .label{
+          @include span-columns(10);
+      }
     }
-  }
+   }
+    @include media(min-width 460px max-width 560px) {
+    font-size: 50%;
+    .fullerton{
+      @include span-columns(12);
+      height: 17em;
+
+    }
+   }
+ 
+   @include media(min-width 1px max-width 460px) {
+    font-size: 40%;
+    .fullerton{
+      @include span-columns(12);
+      height: 19em;
+
+
+    }
+   }
+}
