--- a/app/assets/stylesheets/table_styling.scss
+++ b/app/assets/stylesheets/table_styling.scss
@@ -25,7 +25,7 @@
 
   td {
     line-height: $base-line-height;
-    @include $becoolfont(5em);
+    // @include $becoolfont(5em);
   }
 
   button {
