--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,13 +46,13 @@
 
 
  </div>
-  <div class = "pokedex collapsable">
+  <div class = "pokedex collapsable"> <!-- found in stylseheets/modules.pokedex.scss -->
     <div class ="search fullerton ">
       <%= render '/cards/search' %>
     </div>
-    <div class="cardbox fullerton ">
+   <!--  <div class="cardbox fullerton ">
       This Element Needs Purpose
-    </div>
+    </div> -->
   </div>
 
   <!-- nav -->
