--- a/app/views/users/_inventory_list.html.erb
+++ b/app/views/users/_inventory_list.html.erb
@@ -35,8 +35,8 @@
 				<%= list_fields.fields_for :listed_cards do |listed_card_fields| %>
 					<% listed_card = @user.inventory_cards[i] %>
 						<tr>
-							<td class="inventory-column">
-								!<%= listed_card_fields.number_field :amount %>!
+							<td class="inventory-column inventory">
+								<%= listed_card_fields.number_field :amount %>
 							</td>
 							<td class="tradeable-column">
 								<% if @user.amount_of_card_in("tradeable_list", listed_card.card_id) == 0 %>
