--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,16 @@
-
+<!-- Stylesheet = accordian_tabs.scss -->
 <div class="users show">
 	<div class = "titleofpage">
-		<h2 id="user" data-id=<%= @user.id %>><%= @user.first_name %> <%= @user.last_name %>'s Trade Binder</h2>
+		<h1 id="user" data-id=<%= @user.id %>><%= @user.first_name %> <%= @user.last_name %>'s Trade Binder</h2>
 	</div>
 
 <div class = "clear"></div>
 	<ul class="accordion-tabs">
 		<li class="tab-header-and-content">
-			<%= link_to "Inventory", fetch_list_path(:list_id => @user.inventory_list.id, :user_id => @user.id), :class => "is-active tab-link", :remote => true %>
-			<div class="tab-content">
-				<%= render "inventory_list" %>
-			</div>
+				<%= link_to "Inventory", fetch_list_path(:list_id => @user.inventory_list.id, :user_id => @user.id), :class => "is-active tab-link", :remote => true %>
+				<div class="tab-content">
+					<%= render "inventory_list" %>
+				</div>
 		</li>
 		<li class="tab-header-and-content">
 			<%= link_to "Trade List", fetch_list_path(:list_id => @user.tradeable_list.id, :user_id => @user.id), :class => "tab-link", :remote => true %>
