--- a/app/views/cards/_card_display.html.erb
+++ b/app/views/cards/_card_display.html.erb
@@ -1,3 +1,5 @@
+<!-- stylesheet modules/table_styling.scss -->
+
 <table class="table-minimal">
   <thead>
     <tr>
@@ -30,7 +32,7 @@
       <td>
         $4.95
       </td>
-      <td id="invetory">
+      <td id="inventory">
         <%= link_to add_to_inventory_path(card.id), :method => :put do %> 
           +
         <% end %>
