--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
       <div class= "interface">
         <div class = "signin">
           <% if current_user %>
-            Signed in as <%= current_user.email %> 
+            Signed in as <%= current_user.email %> </br>
             <%= link_to "Log out", session_path("current"), :method => :delete %> 
        <% end %>
         </div>
