--- a/app/assets/stylesheets/modules/thehead.scss
+++ b/app/assets/stylesheets/modules/thehead.scss
@@ -27,10 +27,10 @@ $itempadding: 1%;
 		.signin{
 			height: 4em;
 			@include span-columns(8 of 9);	
-			@include shift(1);
+			@include shift(7);
 
 			// @include becoolfont(2em);
-			text-align: right;
+			text-align: left;
 			padding-right: 2%;
 
 		}
