Removed comment-modal and comment refills

--- a/app/views/comments/_last_comment.html.erb
+++ b/app/views/comments/_last_comment.html.erb
@@ -1,10 +1,10 @@
-<div class="comment">
-  <div class="comment-image">
+<div class="">
+  <div class="">
     <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="Logo image">
   </div>
-  <div class="comment-content">
+  <div class="">
     <h1><%= @comment.user.full_name %></h1>
     <p><%= @comment.body %></p>
-    <p class="comment-detail">to do</p>
+    <p class="">to do</p>
   </div>
 </div>
