--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,12 +1,14 @@
-<% @trade.comments.order(:created_at).each do |comment| %>
-	<div class="">
-	  <div class="">
-	    <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="Logo image">
-	  </div>
-	  <div data-id="<%= comment.id %>" class="comment-content">
-	    <h1><%= comment.user.full_name %></h1>
-	    <p><%= comment.body %></p>
-	    <p class="">to do</p>
-	  </div>
-	</div>
-<% end %>
+<div id="comments-container">
+	<% @trade.comments.order(:created_at).each do |comment| %>
+		<div class="comment">
+		  <div class="comment-image">
+		    <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="Logo image">
+		  </div>
+		  <div data-id="<%= comment.id %>" class="comment-content">
+			    <h1><%= comment.user.full_name %></h1>
+			    <p><%= comment.body %></p>
+		    <p class="comment-detail">Date or details about this post</p>
+		  </div>
+		</div>
+	<% end %>
+</div>
