--- a/app/views/comments/_last_comment.html.erb
+++ b/app/views/comments/_last_comment.html.erb
@@ -1,10 +1,10 @@
-<div class="">
-  <div class="">
+<div class="comment">
+  <div class="comment-image">
     <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="Logo image">
   </div>
-  <div class="">
-    <h1><%= @comment.user.full_name %></h1>
-    <p><%= @comment.body %></p>
-    <p class="">to do</p>
+  <div data-id="<%= @comment.id %>" class="comment-content">
+	    <h1><%= @comment.user.full_name %></h1>
+	    <p><%= @comment.body %></p>
+    <p class="comment-detail">Date or details about this post</p>
   </div>
 </div>
