Added typeahead js and css

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <title>MTG TRADE BINDER DELUXXE</title>
     <%= stylesheet_link_tag    'application', media: 'all'%>
     <%= javascript_include_tag 'application'%>
+    <%= include_gon %>
     <%= csrf_meta_tags %>
      <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
