--- a/app/views/cards/_search.html.erb
+++ b/app/views/cards/_search.html.erb
@@ -4,14 +4,12 @@
 	<%= form_tag("/cards", method: "get") do %>
 		<%= fields_for :card_fields do |ff| %>	
 
-			
-
 				<div class = "box ">						
 					<div class ="name">
 						<%= ff.label :name, "Name:" %>
 					</div>
-					<div class ="input">
-						<%= ff.text_field  :name %>
+					<div class ="input custom-templates">
+						<%= ff.text_field  :name, class: "typeahead" %>
 					</div> 	
 				</div>	
 
