--- a/app/views/users/_inventory_list.html.erb
+++ b/app/views/users/_inventory_list.html.erb
@@ -39,21 +39,41 @@
 							<% listed_card = @user.inventory_cards[i] %>
 								<tr>
 									<td class="inventory-column inventory">
+										<% if @user === current_user %>								
 										<%= listed_card_fields.number_field :amount %>
+										<% else %>
+										<%= @user.amount_of_card_in("inventory_list", listed_card.card_id) %>
+										<% end %>
 									</td>
 									<td class="tradeable-column">
-										<% if @user.amount_of_card_in("tradeable_list", listed_card.card_id) == 0 %>
-											<%= link_to "Add", add_to_tradeable_path(listed_card.card_id), :method => :put %>
-										<% else %>   
-											<%= @user.amount_of_card_in("tradeable_list", listed_card.card_id) %>
-										<% end %>
+										<% if @user === current_user %>								
+											<% if @user.amount_of_card_in("tradeable_list", listed_card.card_id) == 0 %>
+												<%= link_to "Add", add_to_tradeable_path(listed_card.card_id), :method => :put %>
+											<% else %>   
+												<%= @user.amount_of_card_in("tradeable_list", listed_card.card_id) %>
+											<% end %>
+										<% else %>
+											<% if @user.amount_of_card_in("tradeable_list", listed_card.card_id) == 0 %>
+												0
+											<% else %>   
+												<%= @user.amount_of_card_in("tradeable_list", listed_card.card_id) %>
+											<% end %>
+										<% end %>										
 									</td>
 									<td class="wanted-column">
-										<% if @user.amount_of_card_in("wanted_list", listed_card.card_id) == 0 %>
-											<%= link_to "Add", add_to_wanted_path(listed_card.card_id), :method => :put %>
-										<% else %>   
-											<%= @user.amount_of_card_in("wanted_list", listed_card.card_id) %>
-										<% end %>
+										<% if @user === current_user %>								
+											<% if @user.amount_of_card_in("wanted_list", listed_card.card_id) == 0 %>
+												<%= link_to "Add", add_to_wanted_path(listed_card.card_id), :method => :put %>
+											<% else %>   
+												<%= @user.amount_of_card_in("wanted_list", listed_card.card_id) %>
+											<% end %>
+										<% else %>
+											<% if @user.amount_of_card_in("wanted_list", listed_card.card_id) == 0 %>
+												0
+											<% else %>   
+												<%= @user.amount_of_card_in("wanted_list", listed_card.card_id) %>
+											<% end %>
+										<% end %>										
 									</td>
 									<td>
 										<%= link_to "#{listed_card.card.name}", card_path(listed_card.card_id) %>
@@ -79,7 +99,10 @@
 					</table>
 				<% end %>	
 		<% end %>
-	<%= f.submit "Save" %>
+	<% if @user === current_user %>
+		<%= f.submit "Save" %>
+	<% else %>
+	<% end %>
 <% end %>
 
 
