--- a/app/views/users/_tradeable_list.html.erb
+++ b/app/views/users/_tradeable_list.html.erb
@@ -30,29 +30,49 @@
 					</th>
 				</tr>
 				<% if @user.tradeable_cards.empty? %>				
-			</tbody>
-		</table>
-		<div>We can't seem to find any cards in your Trade List. To add a card <a href="/cards">click here!</a></div>
+						</tbody>
+					</table>
+					<div>We can't seem to find any cards in your Trade List. To add a card <a href="/cards">click here!</a></div>
 				<% else %>
 					<% i = 0 %>
 					<%= list_fields.fields_for :listed_cards do |listed_card_fields| %>
 						<% listed_card = @user.tradeable_cards[i] %>
 							<tr>
 								<td class="inventory-column">
-									<% if @user.amount_of_card_in("inventory_list", listed_card.card_id) == 0 %>
-										<%= link_to "Add", add_to_inventory_path(listed_card.card_id), :method => :put %>
-									<% else %>   
-										<%= @user.amount_of_card_in("inventory_list", listed_card.card_id) %>
+									<% if @user === current_user %>
+										<% if @user.amount_of_card_in("inventory_list", listed_card.card_id) == 0 %>
+											<%= link_to "Add", add_to_inventory_path(listed_card.card_id), :method => :put %>
+										<% else %>   
+											<%= @user.amount_of_card_in("inventory_list", listed_card.card_id) %>
+										<% end %>
+									<% else %>
+										<% if @user.amount_of_card_in("inventory_list", listed_card.card_id) == 0 %>
+											0
+										<% else %>   
+											<%= @user.amount_of_card_in("inventory_list", listed_card.card_id) %>
+										<% end %>
 									<% end %>
 								</td>
 								<td class="tradeable-column">
-									<%= listed_card_fields.number_field :amount %>
+									<% if @user === current_user %>
+										<%= listed_card_fields.number_field :amount %>
+									<% else %>
+										<%= @user.amount_of_card_in("tradeable_list", listed_card.card_id) %>
+									<% end %>
 								</td>
 								<td class="wanted-column">
-									<% if @user.amount_of_card_in("wanted_list", listed_card.card_id) == 0 %>
-										<%= link_to "Add", add_to_wanted_path(listed_card.card_id), :method => :put %>
-									<% else %>   
-										<%= @user.amount_of_card_in("wanted_list", listed_card.card_id) %>
+									<% if @user === current_user %>
+										<% if @user.amount_of_card_in("wanted_list", listed_card.card_id) == 0 %>
+											<%= link_to "Add", add_to_wanted_path(listed_card.card_id), :method => :put %>
+										<% else %>   
+											<%= @user.amount_of_card_in("wanted_list", listed_card.card_id) %>
+										<% end %>
+									<% else %>
+										<% if @user.amount_of_card_in("wanted_list", listed_card.card_id) == 0 %>
+											0
+										<% else %>   
+											<%= @user.amount_of_card_in("wanted_list", listed_card.card_id) %>
+										<% end %>
 									<% end %>
 								</td>
 								<td>
@@ -79,7 +99,10 @@
 			</table>
 			<% end %>
 	<% end %>
-	<%= f.submit "Save" %>
+	<% if @user === current_user %>
+		<%= f.submit "Save" %>
+	<% else %>
+	<% end %>
 <% end %>
 
 
