--- a/app/views/users/_display_users.html.erb
+++ b/app/views/users/_display_users.html.erb
@@ -11,28 +11,35 @@
 				<th>Trade</th>
 			</tr>
 		</thead>
-		<% users.each do |user| %>
-			<tr>
-				<td>
-					<%= link_to user.full_name , user_path(user.id) %>
-				</td>
-				<td> 
-					$<%= current_user.can_give(user) %> / $<%= current_user.can_receive(user) %>
-				</td>
-				<td>
-					Online Now!
-				</td>
-				<td>
-					<% if current_user.address == nil || user.address == nil %>
-						Unknown
-					<% else %>
-						<%= user.distance_to(current_user).round(2) %>
-					<% end %>
-				</td>
-				<td>
-					<h4><%= link_to "Propose Trade", new_user_trade_path(user.id) %> <br/> </h4>
-				</td>
-				<br/>
-			</tr>	
+		<% if users.empty? %>
+				</tbody>
+			</table>
+			<div class="empty-list-alert">No users were found with this card</div>
+
+		<% else %>
+			<% users.each do |user| %>
+				<tr>
+					<td>
+						<%= link_to user.full_name , user_path(user.id) %>
+					</td>
+					<td> 
+						$<%= current_user.can_give(user) %> / $<%= current_user.can_receive(user) %>
+					</td>
+					<td>
+						Online Now!
+					</td>
+					<td>
+						<% if current_user.address == nil || user.address == nil %>
+							Unknown
+						<% else %>
+							<%= user.distance_to(current_user).round(2) %>
+						<% end %>
+					</td>
+					<td>
+						<h4><%= link_to "Propose Trade", new_user_trade_path(user.id) %> <br/> </h4>
+					</td>
+					<br/>
+				</tr>	
+			<% end %>
 		<% end %>
 </table>
