--- a/app/views/users/_inventory_list.html.erb
+++ b/app/views/users/_inventory_list.html.erb
@@ -29,10 +29,10 @@
 						<h4>Cost</h4>
 					</th>
 				</tr>			
-				<% if @user.inventory_cards.empty? %>				
+				<% if @user.inventory_cards.empty? && @user == current_user %>				
 						</tbody>
 					</table>
-					<div>There doesn't seem to be any cards in your Inventory. To add a card <a href="/cards">click here!</a></div>
+					<div class="empty-list-notice">There don't seem to be any cards in your Inventory. To find and add a card <a href="/cards">click here!</a></div>
 				<% else %>
 					<% i = 0 %>
 						<%= list_fields.fields_for :listed_cards do |listed_card_fields| %>			
