--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,36 +16,33 @@
   </head>
 
 <body>
-  <div class = " thehead collapsable "> <!-- Found in /stylesheets/modules/thehead.scss -->
-    <div class ="maintitle">
-      <div class="text">
-        <h1> The Magic,<br/> The Gathering,<br/> The Trade,<br/> The Binder </h1>
-      </div>
-    </div>
-    <div class= "interface">
-      <div class = "signin">
+  <header class="navigation" role="banner">
+    <div class="navigation-wrapper">
+      <a href="/cards" class="logo">
+        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="Logo Image">
+      </a>
+      <a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
+      <nav role="navigation">
+        <ul id="js-navigation-menu" class="navigation-menu show">
         <% if current_user %>
-          Signed in as <%= current_user.email %> </br>
-          <%= link_to "Log out", session_path("current"), :method => :delete %> 
-     <% end %>
-      </div>
-
-      <div class = "menu ">
+          <li class="nav-link"><%= link_to "My Binder", user_path(current_user.id)%></li>
+          <li class="nav-link"><%= link_to "My Trades", user_trades_path(current_user.id) %></li>
+          <li class="nav-link"><%= link_to "Find Trades", users_path%></li>
+        <% end %>
+        </ul>
+      </nav>
+      <div class="navigation-tools">
         <% if current_user %>
-          <div class = "menuitem"><%= link_to "My Binder", user_path(current_user.id)%> </div>
-          <div class = "menuitem"><%= link_to "My Trades", user_trades_path(current_user.id) %></div>
-          <div class = "menuitem"><%= link_to "Find Trades", users_path%></div>
-          <div class = "menuitem"><%= link_to "User Settings", edit_user_path(current_user.id) %></br></div>
+          <li class="nav-link"><p>Signed in as <%= current_user.email %></p></li>
+          <%= link_to "Log out", session_path("current"), :method => :delete, :class =>"sign-up" %> 
         <% else %>
-          <div class = "menuitem"><%= link_to "Log in", new_session_path %> </div>
-          <div class = "menuitem"><%= link_to "Sign up", new_user_path %></div>
-
+          <a href="/sessions/new" class="sign-up">Log In</a>
+          <a href="/users/new" class="sign-up">Sign Up</a>
         <% end %>
       </div>
-      
     </div>
-   </div>
- 
+  </header>
+
   <div class = "pokedex collapsable"> <!-- found in stylseheets/modules.pokedex.scss -->
     <div class ="search fullerton ">
       <%= render '/cards/search' %>
@@ -57,12 +54,9 @@
 
   <!-- nav -->
 
-    
-
-      <div class = "mainscreen collapsable">
-    
-      <%= yield %>
-      </div>
+  <div class = "mainscreen collapsable">
+    <%= yield %>
+  </div>
 
 </body>
 
