Made slight changes to layout and resized text

--- a/app/assets/stylesheets/themepack.scss
+++ b/app/assets/stylesheets/themepack.scss
@@ -49,27 +49,27 @@ $searchtextalign: right;
 	}
 
 	a:link {
-		background-color: rgba( $link-background, .7 );
-	    color: black;
+		// background-color: rgba( $link-background, .7 );
+	 //    color: black;
 	}
 
 	a:visited {
-	    color: black;
+	    // color: black;
 	}
 
 	a:hover {
-	    color: black;
+	    // color: black;
 	}
 	a:active {
-	    color: black;
+	    // color: black;
 	}
 
 	h1{
-		font-size: 2em;
+		// font-size: 2em;
 	}
 
 	a{
-		font-size: 2em;
+		// font-size: 2em;
 	} 
 
 
