--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,12 +43,11 @@
         <% end %>
       </div>
     </div>
-
-   </div>
+  </header>
  
   <div class = "pokedex collapsable", id = "search"> <!-- found in stylseheets/modules.pokedex.scss -->
     <div class = "search-button">
-      <h1>Search</h1>
+      <h2>Card Search</h2>
       </div>
     <div class ="search fullerton">
       <%= render '/cards/search' %>
